[gd_scene load_steps=11 format=3 uid="uid://ds58aa3pwnli7"]

[ext_resource type="Script" path="res://Scripts/ExplodeOnContact.gd" id="1_s8mq8"]
[ext_resource type="PackedScene" uid="uid://prp5aegrngoj" path="res://Addons/godot-polygon2d-fracture-2.0.0/src/FractureBody.tscn" id="2_2mhe2"]
[ext_resource type="PackedScene" uid="uid://dhrqqo38wiuqi" path="res://Addons/godot-polygon2d-fracture-2.0.0/pool-manager/Pool2DBasic.tscn" id="2_g3mal"]
[ext_resource type="Script" path="res://Scripts/Asteroid.gd" id="4_ryu37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pouxm"]
size = Vector2(1152, 36)

[sub_resource type="Gradient" id="Gradient_m5pg6"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pr1p7"]
gradient = SubResource("Gradient_m5pg6")

[sub_resource type="Gradient" id="Gradient_ma04n"]
interpolation_mode = 1

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t52dg"]
gradient = SubResource("Gradient_ma04n")

[sub_resource type="CircleShape2D" id="CircleShape2D_blpqq"]
radius = 16.0

[node name="TestDestructiveBody" type="Node2D"]

[node name="Ground" type="Node2D" parent="."]
position = Vector2(576, 616)

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D"]
shape = SubResource("RectangleShape2D_pouxm")

[node name="Sprite2D" type="Sprite2D" parent="Ground/StaticBody2D"]
scale = Vector2(18, 0.5625)
texture = SubResource("GradientTexture2D_pr1p7")

[node name="OldAsteroid" type="RigidBody2D" parent="."]
position = Vector2(592.305, 397)
gravity_scale = 0.0
script = ExtResource("1_s8mq8")
fracture_body_color = Color(0.846911, 0.428994, 0.565963, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OldAsteroid"]
polygon = PackedVector2Array(-34, -42, -106, 22, 5, 103, 85, 28, 81, -69, 28, -59)

[node name="Polygon2D" type="Polygon2D" parent="OldAsteroid"]
texture = SubResource("GradientTexture1D_t52dg")
texture_offset = Vector2(59.855, 45)
polygon = PackedVector2Array(-34, -42, -106, 22, 5, 103, 86, 28, 81, -68, 27, -60)

[node name="Pool_FractureBodies" parent="OldAsteroid" instance=ExtResource("2_g3mal")]
placed_in_level = true
instance_template = ExtResource("2_2mhe2")
max_amount = 300
instantiate_new_on_empty = true

[node name="NewAsteroid" type="RigidBody2D" parent="."]
position = Vector2(435.88, 343.79)
gravity_scale = 0.0
script = ExtResource("4_ryu37")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NewAsteroid"]
polygon = PackedVector2Array(-34, -42, -106, 22, 5, 103, 85, 28, 81, -69, 28, -59)

[node name="Polygon2D" type="Polygon2D" parent="NewAsteroid"]
texture = SubResource("GradientTexture1D_t52dg")
texture_offset = Vector2(59.855, 45)
polygon = PackedVector2Array(-34, -42, -106, 22, 5, 103, 86, 28, 81, -68, 27, -60)

[node name="Sphere" type="Node2D" parent="."]
position = Vector2(524, 196)

[node name="SphereBody" type="RigidBody2D" parent="Sphere"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sphere/SphereBody"]
shape = SubResource("CircleShape2D_blpqq")

[node name="Polygon2D" type="Polygon2D" parent="Sphere/SphereBody"]
polygon = PackedVector2Array(-15, -4, -16, 0, -15, 4, -14, 8, -11, 11, -8, 14, -4, 15, 0, 16, 4, 15, 8, 14, 11, 11, 14, 8, 15, 4, 16, 0, 15, -4, 14, -8, 11, -11, 8, -14, 4, -15, 0, -16, -4, -15, -8, -14, -11, -11, -14, -8)

[node name="TextNewVersion" type="TextEdit" parent="."]
offset_left = 248.0
offset_top = 261.0
offset_right = 365.0
offset_bottom = 293.0
text = "NEW VERSION"

[node name="TextOldVersion" type="TextEdit" parent="."]
offset_left = 683.0
offset_top = 256.0
offset_right = 800.0
offset_bottom = 288.0
text = "OLD VERSION"

[connection signal="body_entered" from="OldAsteroid" to="OldAsteroid" method="_on_body_entered"]
[connection signal="body_shape_entered" from="OldAsteroid" to="OldAsteroid" method="_on_body_shape_entered"]
[connection signal="body_entered" from="NewAsteroid" to="NewAsteroid" method="_on_body_entered"]
